[Fix] fix display on iphone6/7/8 plus

--- a/src/assets/scss/CFP/header.scss
+++ b/src/assets/scss/CFP/header.scss
@@ -36,6 +36,7 @@ $width-svg-news2: 285px;
   }
 
   .info-box {
+  width: 95vw;
     display: flex;
     flex-direction: row;
     // justify-content: space-around;
